welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:33: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:36: error: expected start of definition
	override def forward()  {
                 ^Diagonal:39: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:42: error: expected start of definition
	override def backward() {
                 ^Diagonal:45: error: Unmatched closing brace '}' ignored here
}
^